<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/label_checkin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin_date_text"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@+id/label_welcome_text"
                app:layout_constraintRight_toRightOf="@+id/label_welcome_text"
                app:layout_constraintTop_toBottomOf="@+id/label_welcome_text"
                />

            <DatePicker
                android:id="@+id/checkin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintLeft_toLeftOf="@+id/label_checkin_date"
                app:layout_constraintRight_toRightOf="@+id/label_checkin_date"
                app:layout_constraintTop_toBottomOf="@+id/label_checkin_date"
                />

            <TextView
                android:id="@+id/label_checkout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/checkout_date_text"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@+id/checkin_date"
                app:layout_constraintRight_toRightOf="@+id/checkin_date"
                app:layout_constraintTop_toBottomOf="@+id/checkin_date"
                />

            <DatePicker
                android:id="@+id/checkout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintLeft_toLeftOf="@+id/label_checkout_date"
                app:layout_constraintRight_toRightOf="@+id/label_checkout_date"
                app:layout_constraintTop_toBottomOf="@+id/label_checkout_date"
                />

            <TextView
                android:id="@+id/label_num_guests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/num_of_guests_text"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@+id/checkout_date"
                app:layout_constraintRight_toRightOf="@+id/checkout_date"
                app:layout_constraintTop_toBottomOf="@+id/checkout_date"
                />

            <EditText
                android:id="@+id/input_num_guests"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guest_number_hint"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="@+id/label_num_guests"
                app:layout_constraintRight_toRightOf="@+id/label_num_guests"
                app:layout_constraintTop_toBottomOf="@+id/label_num_guests"
                />

            <TextView
                android:id="@+id/label_name_guests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/guest_name_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@+id/input_num_guests"
                app:layout_constraintRight_toRightOf="@+id/input_num_guests"
                app:layout_constraintTop_toBottomOf="@+id/input_num_guests"
                />

            <EditText
                android:id="@+id/input_guests_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/guest_name_hint"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="@+id/label_name_guests"
                app:layout_constraintRight_toRightOf="@+id/label_name_guests"
                app:layout_constraintTop_toBottomOf="@+id/label_name_guests"
                />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_button_text"
                app:layout_constraintLeft_toLeftOf="@+id/input_guests_name"
                app:layout_constraintRight_toRightOf="@+id/input_guests_name"
                app:layout_constraintTop_toBottomOf="@+id/input_guests_name"/>

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button_text"
                app:layout_constraintLeft_toLeftOf="@+id/button_submit"
                app:layout_constraintRight_toRightOf="@+id/button_submit"
                app:layout_constraintTop_toBottomOf="@+id/button_submit"/>

            <TextView
                android:id="@+id/display_submit_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@+id/button_search"
                app:layout_constraintRight_toRightOf="@+id/button_search"
                app:layout_constraintTop_toBottomOf="@+id/button_search"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>